--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /src/main/spider/all.log
 /src/main/spider/error.log
+/.idea/vcs.xml
+/.idea/SLTG.iml
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/.gitignore
+
